--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -206,6 +206,7 @@
 	<td VALIGN=top><small>
 	1.	Jesus.
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note265">265</a><p>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p227-238Ch16.html#p228">p. 228</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">10</DIV></center><p></small></td>
@@ -721,7 +722,8 @@
 	It is permissible to study sciences and arts, but such sciences as are useful and would redound to the progress and advancement of the people. Thus hath it been decreed by Him Who is the Ordainer, the All-Wise.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note162">162</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2454,6 +2456,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note176">176</a><p>
 	["How vast is the tabernacle..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p050-072Ch04.html#p72">p. 72</a>, <a href="../../Others/ROB/V4/p351-367Ch23.html#p358">p. 358</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -2534,6 +2537,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note345">345</a><p>
 	["We have erewhile declared..."] <i>The Revelation of Bahá'u'lláh</i>, vol.	4 <a href="../../Others/ROB/V4/p329-350Ch22.html#p340">p. 340</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">88</DIV></center><p></small></td>
@@ -2573,6 +2577,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note345">345</a><p>
 	["Every verse which..."] <i>The Revelation of Bahá'u'lláh</i>, vol.	4 <a href="../../Others/ROB/V4/p329-350Ch22.html#p339">p. 339</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">89</DIV></center><p></small></td>
@@ -3009,6 +3014,7 @@
 	<td VALIGN=top><small>
 	1. cf. <a href="../../../CLUI/UnifiedIndex.html#Qur'án21:23">Qur'án 21:23</a>.
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note301">301</a><p>
 	[Most Great Infallibility] <i>The Kitab-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para47">&para;47</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p133">p. 133</a>; vol. 2 <a href="../../Others/ROB/V2/p236-269Ch11.html#p262">p. 262</a>; vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p300">p. 300</a>; vol. 4 <a href="../../Others/ROB/V4/p145-160Ch09.html#p149">p. 149</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -3734,6 +3740,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. In a Tablet Bahá'u'lláh states, 'The Holy Tree [Sadrat] is, in a sense, the Manifestation of the One True God, exalted be He. The Blessed Tree in the land of Za'farán referreth to the land which is flourishing, blessed, holy and all-perfumed, where that Tree hath been planted.'
+    <hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note77">77</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -5016,7 +5024,8 @@
 	Thou hast asked regarding the subject of the return. Know thou that the end is like unto the beginning. Even as thou dost consider the beginning, similarly shouldst thou consider the end, and be of them that truly perceive. Nay, rather consider the beginning as the end itself, and so conversely, that thou mayest acquire a clear perception. Know thou moreover that every created thing is continually brought forth and returned at the bidding of thy Lord, the God of power and might.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note283">283</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -5152,6 +5161,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../KI/Annotations.html#note67">67</a><p>
 	["For every act performed..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 <a href="../../Others/ROB/V4/p205-213Ch14.html#p211">p. 211</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
