--- a/Baha'i/Comp/BP/Prologue.html
+++ b/Baha'i/Comp/BP/Prologue.html
@@ -93,7 +93,7 @@
 	<td VALIGN=top width="20%"><small>
 	<hr>
 	<i>The Revelation Of Baha'u'llah</i>, vol.4 <a href="../../Others/ROB/V4/p315-328Ch21.html#p316">p. 316</a><p>
-	Audio: <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Blessed is the Spot</a> (in Arabic). See <a href="../../../download.html">Download Center</a>.
+	Audio: <a href="../../../Downloads/Arabic-BlessedIsTheSpot.mp3">Blessed is the Spot</a> (in Arabic). See <a href="../../../download.html">Download Center</a>.
 	</small>
 	
 	</td>
@@ -114,7 +114,7 @@
 	&nbsp;&nbsp;&nbsp;may kindle thine own <a class="hh" title="The inner and essential reality of man which is not composed of physical matter and thus continues to exist after death" href="../../../CLUG/UnifiedGlossary.html#Soul">soul</a>,<br>
 	and attract the <a class="hh" title="The symbolic centre of an individual's spirituality" href="../../../CLUG/UnifiedGlossary.html#Heart">heart</a>s of all men.<br>
 	&nbsp;&nbsp;&nbsp;Whoso reciteth, in the privacy of his chamber,<br> 
-	the verses <a class="hh" title="The Unveiling by God of the laws, teachings or message transmitted through His Manifestations to mankind which hitherto He had hidden from them" href="../../../CLUG/UnifiedGlossary.html#Revelation">revealed</a> by God,<br>
+	the verses <a class="hh" title="[The Third of The Three Stages of Divine Revelation] The Unveiling by God of the laws, teachings or message transmitted through His Manifestations to mankind which hitherto He had hidden from them. 'Such revelation is confined to His Prophets and chosen Ones, inasmuch as none mightier than they hath come to exist in the world of being.' --Bahá'u'lláh" href="../../../CLUG/UnifiedGlossary.html#Tajallíy-i-Thání">revealed</a> by God,<br>
 	&nbsp;&nbsp;&nbsp;the scattering angels of the Almighty<br> 
 	shall scatter abroad the fragrance<br> 
 	&nbsp;&nbsp;&nbsp;of the words uttered by his mouth,<br>
