--- a/Baha'i/Others/DBNN/Introduction.html
+++ b/Baha'i/Others/DBNN/Introduction.html
@@ -637,7 +637,7 @@ para70 - "in thine heart" should be "in thy heart" to match quote from Iqan
 	<td VALIGN=top><small>
 	<hr>
 	<i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para156">p. 230</a><p>
-	["Another proof..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../ROB/V1/p153-197Ch10.html#p192">p. 192</a>
+	["Though young and tender of age..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../ROB/V1/p153-197Ch10.html#p192">p. 192</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
