--- a/Baha'i/Others/DBNN/p001-018Ch01.html
+++ b/Baha'i/Others/DBNN/p001-018Ch01.html
@@ -59,7 +59,10 @@
 	</td>
 	<td VALIGN=top width="20%"><small>
 	<hr>
-	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p165-251Notes.html#note171">Note 171</a>; <i>Epistle to the Son of the Wolf</i>, <a href="../../Baha/EW/p001-182.html#para176">p. 120</a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, vol. 2 <a href="../ROB/V2/p171-193Ch08.html#p180">p. 180</a>
+	<i>The Kitáb-i-Aqdas</i>, <a href="../../Baha/KA/p165-251Notes.html#note171">Note 171</a><p>
+	<i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note154">154</a><p>
+	<i>Epistle to the Son of the Wolf</i>, <a href="../../Baha/EW/p001-182.html#para176">p. 120</a><p>
+	<i>The Revelation of Bahá'u'lláh</i>, <a href="../ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, vol. 2 <a href="../ROB/V2/p171-193Ch08.html#p180">p. 180</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">1</DIV></center><p></small></td>
 </tr>
