--- a/Baha'i/Others/DBNN/p019-046Ch02.html
+++ b/Baha'i/Others/DBNN/p019-046Ch02.html
@@ -314,6 +314,7 @@ Every time I approached him, I was overcome by a sense of awe which his personal
 	<a name="f22"></a><a href="p019-046Ch02-footnotes.html#f22">22.</a>	According to Samandar (p. 32), Shaykh Abú-Turáb was a native of Ishhtihad, and ranked among the leading disciples of Siyyid Kázim. He married the sister of Mullá Husayn. He died while in prison in Tihrán.  <p>
 	<a name="f23"></a><a href="p019-046Ch02-footnotes.html#f23">23.</a>	"The Báb wrote to Hájí Muhammad-Karím Khán … and invited him to acknowledge his authority. This the latter not only entirely refused to do, but further wrote a treatise against the Báb and his doctrines." (P. 910.) "At least two such treatises were written by Hájí Muhammad-Karím Khán. One of them was composed at a later date than this, probably after the Báb's death, at the special request of Násiri'd-Dín Sháh. Of these two one has been printed, and is called 'the crushing of falsehood' (Izhaqu'l-Batil)." (Footnote 1, p. 910.) (<i>Journal of the Royal Asiatic Society</i>, 1889, article 12.)<p>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note405">405</a><p>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../ROB/V1/p332-336Apndx_IV.html">Appendix IV</a>
 	</small></div></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">39</DIV></center></small></td>
