--- a/Baha'i/Others/DBNN/p047-096Ch03.html
+++ b/Baha'i/Others/DBNN/p047-096Ch03.html
@@ -715,10 +715,11 @@ changed muadhdhín to mu'adhdhín to match glossary
 </tr>
 <tr class=hideRowWithNoFootnotes>
 	<td><a name="para47"></a>
-	"I continued my search until I reached them. Seized with a savage fury, I inflicted upon Mullá 'Alí unspeakable injuries. To the strokes that fell heavily upon him, he, with extraordinary serenity, returned this answer: 'Stay your hand, O 'Abdu'l-Majíd, for the eye of God is observing you. I take Him as my witness, that I am in no wise responsible for the conduct of your son. I mind not the tortures you inflict upon me, for I stand prepared for the most grievous afflictions in the path I have chosen to follow. Your injuries, compared to what is destined to befall me in future, are as a drop compared to the ocean. Verily, I say, you shall survive me, and will come to recognise my innocence. Great will then be your remorse, and deep your sorrow.' Scorning his remarks, and heedless of his appeal, I continued to beat him until I was exhausted. Silently and heroically he endured this most undeserved chastisement at my hands. Finally, I ordered my son to follow me, and left Mullá 'Alí to himself. 
+	"I continued my search until I reached them. Seized with a savage fury, I inflicted upon Mullá 'Alí unspeakable injuries. To the strokes that fell heavily upon him, he, with extraordinary serenity, returned this answer: 'Stay your hand, O 'Abdu'l-Majíd, for the eye of God is observing you. I take Him as my witness, that I am in no wise responsible for the conduct of your son. I mind not the tortures you inflict upon me, for I stand prepared for the most grievous afflictions in the path I have chosen to follow. Your injuries, compared to what is destined to befall me in future, are as a drop compared to the ocean. Verily, I say, you shall survive me, and will come to recognise my innocence. Great will then be your remorse, and deep your sorrow.' Scorning his remarks, and heedless of his appeal, I continued to beat him until I was exhausted. Silently and heroically he endured this most undeserved chastisement at my hands. Finally, I ordered my son to follow me, and left Mullá 'Alí to himself.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note355">355</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
