--- a/Baha'i/Others/DBNN/p170-198Ch09.html
+++ b/Baha'i/Others/DBNN/p170-198Ch09.html
@@ -127,6 +127,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note353">353</a><p>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../ROB/V1/p325-331Apndx_III.html#p327">p. 327</a>		
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -402,7 +403,7 @@
 	Mullá Yúsúf-i-Ardibílí, likewise, was subjected in those days to a persecution fiercer and more determined than the savage onslaught which the people of Yazd had directed against Mullá Sádiq. But for the intervention of Mírzá Ahmad and the assistance of his uncle, he would have fallen a victim to the wrath of a ferocious enemy.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+		["Mullá Yúsúf-i-Ardibílí"] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#parb248">&para;248</a>, Annotations, <a href="../../Baha/KI/Annotations.html#note357">357</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
