--- a/Baha'i/Others/DBNN/p301-308Ch17.html
+++ b/Baha'i/Others/DBNN/p301-308Ch17.html
@@ -137,7 +137,9 @@ Man-Yuzhiruhu'llah changed to Man-Yuzhiruh'lláh (to match glossary)
 	<a name="f7"/><a href="p301-308Ch17-footnotes.html#f7">7.</a>	Science of divination.  <p>
 	<a name="f8"/><a href="p301-308Ch17-footnotes.html#f8">8.</a>	'He whom God will make manifest.' Title given by the Báb to the promised One. Reference to Bahá'u'lláh.<p>
 	<a name="f9"/><a href="p301-308Ch17-footnotes.html#f9">9.</a>	'He who is invoked'; the numerical value of which has been assigned by the Báb as the limit of the time fixed for the advent of the promised Manifestation.
-	</small></div></td>
+    <hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note368">368</a><p>
+    </small></div></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">305</DIV></center></small></td>
 </tr>
 <tr class=hideRowWithNoFootnotes>
