--- a/Baha'i/Others/DBNN/p324-377Ch19.html
+++ b/Baha'i/Others/DBNN/p324-377Ch19.html
@@ -558,10 +558,10 @@ footnote 53, changed page number in EttSotW from 57 to 77
 	In this manner they reached the shrine of Shaykh Tabarsí. The first words that fell from the lips of Quddús after he had dismounted and leaned against the shrine were the following: "The <span style="background-color: #ffffCC" TITLE="'Remnant of God.' Title applied both to the Báb and to Bahá'u'lláh">Baqíyyatu'lláh</span> <sup><small>34</small></sup> will be best for you if ye are of those who believe." <sup><small>35</small></sup> By this utterance was fulfilled the prophecy of Muhammad as recorded in the following tradition: "And when the <span style="background-color: #ffffCC" TITLE="Title of the Manifestation expected by Islám">Mihdí</span> <sup><small>36</small></sup> is made manifest, He shall lean His back against the <span style="background-color: #ffffCC" TITLE="Ancient shrine at Mecca. Now recognised as the most holy shrine of Islám">Ka'bih</span> and shall address to the three hundred and thirteen followers who will have grouped around Him, these words: 'The Baqíyyatu'lláh will be best for you if <a name="p353"></a>ye are of those who believe.'" By "Baqíyyatu'lláh" Quddús meant none other than Bahá'u'lláh. To this testified Mullá Mírzá Muhammad-i-Furúghí, who related to me the following: "I myself was present when Quddús alighted from his horse. I saw him lean against the shrine and heard him utter those same words. No sooner had he spoken them than he made mention of Bahá'u'lláh and, turning to Mullá Husayn, enquired about Him. He was informed that unless God decreed to the contrary, He had signified His intention to return to this place before the first day of Muharram. <sup><small>37</small></sup>
 	</td>
 	<td VALIGN=top><small>
-	<a name="f34"/><a href="p324-377Ch19-footnotes.html#f34">34.</a>	Literally "Remnant of God."  <p>
-	<a name="f35"/><a href="p324-377Ch19-footnotes.html#f35">35.</a>	Qur'án, 11:85.  <p>
-	<a name="f36"/><a href="p324-377Ch19-footnotes.html#f36">36.</a>	Title of the Manifestation expected by Islám.<p>
-	<a name="f37"/><a href="p324-377Ch19-footnotes.html#f37">37.</a>	November 27, 1848 A.D. 
+	<a name="f34"/><a href="p324-377Ch19-footnotes.html#f34">34.</a> Literally "Remnant of God."  <p>
+	<a name="f35"/><a href="p324-377Ch19-footnotes.html#f35">35.</a> <a href="../../../CLUI/UnifiedIndex.html#Qur'án11:85">Qur'án, 11:85</a>.  <p>
+	<a name="f36"/><a href="p324-377Ch19-footnotes.html#f36">36.</a> Title of the Manifestation expected by Islám.<p>
+	<a name="f37"/><a href="p324-377Ch19-footnotes.html#f37">37.</a> November 27, 1848 A.D.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">353</DIV></center></small></td>
 </tr>
@@ -782,7 +782,7 @@ footnote 53, changed page number in EttSotW from 57 to 77
 	They were throwing open the gate of the prison which had been in the hands of the enemy, when they heard the voice of Mullá Yúsúf-i-Ardibílí, who had been made a captive on his way to the fort and was languishing among the prisoners. He interceded for his fellow-sufferers and succeeded in obtaining their immediate release.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+		["Mullá Yúsúf-i-Ardibílí"] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#parb248">&para;248</a>, Annotations, <a href="../../Baha/KI/Annotations.html#note357">357</a><p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -811,6 +811,7 @@ footnote 53, changed page number in EttSotW from 57 to 77
 	<td VALIGN=top><small>
 	<a name="f52"/><a href="p324-377Ch19-footnotes.html#f52">52.</a>	December 21, 1848 A.D.
 	<hr>
+    ["Mullá Báqir-i-Tabrízí"] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#parb248">&para;248</a>, Annotations, <a href="../../Baha/KI/Annotations.html#note361">361</a><p>
 	["prison of the Land of Mím"] <i>Epistle to the Son of the Wolf</i>, <a href="../../Baha/EW/p001-182.html#para127">p. 77</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../ROB/V4/p368-390Ch24.html#p389">p. 389</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">369</DIV></center></small></td>
