--- a/Baha'i/Others/DBNN/p378-429Ch20.html
+++ b/Baha'i/Others/DBNN/p378-429Ch20.html
@@ -376,7 +376,7 @@ footnote 40 - changed The "Kitáb-i-Íqán," pp. 189-91 to 224-6.
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	[Mullá Yúsúf-i-Ardibílí] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#para146">p. 223</a>
+    ["Mullá Yúsúf-i-Ardibílí"] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#parb248">&para;248</a>, Annotations, <a href="../../Baha/KI/Annotations.html#note357">357</a><p>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">400</DIV></center></small></td>
 </tr>
@@ -394,7 +394,7 @@ footnote 40 - changed The "Kitáb-i-Íqán," pp. 189-91 to 224-6.
 	Quddús received the Qur'án from the hand of his messenger, kissed it reverently, and said: "O our Lord, decide between us and between our people with truth; for the best to decide art Thou." <sup><small>33</small></sup> Immediately after, he bade the rest of his companions prepare themselves to leave the fort. "By our response to their invitation," he told them, "we shall enable them to demonstrate the sincerity of their intentions."
 	</td>
 	<td VALIGN=top><small>
-	<a name="f33"/><a href="p378-429Ch20-footnotes.html#f33">33.</a>	Qur'án, 7:88.  
+	<a name="f33"/><a href="p378-429Ch20-footnotes.html#f33">33.</a> <a href="../../../CLUI/UnifiedIndex.html#Qur'án7:88">Qur'án, 7:88</a>.  
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
