--- a/Baha'i/Others/DBNN/p430-464Ch21.html
+++ b/Baha'i/Others/DBNN/p430-464Ch21.html
@@ -504,6 +504,8 @@ footnote #10, page number in EttSotW changed from 125 to 168
 	</td>
 	<td VALIGN=top><small>
 	<a name="f42"/><a href="p430-464Ch21-footnotes.html#f42">42.</a>	1847–8 A.D.
+    <hr>
+    ["Siyyid Husayn-i-Turshízí"] <i>The Kitáb-i-Íqán</i>, <a href="../../Baha/KI/p095-258.html#parb248">&para;248</a>, Annotations, <a href="../../Baha/KI/Annotations.html#note359">359</a><p>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">456</DIV></center></small></td>
 </tr>
