--- a/Baha'i/Others/DBNN/p527-581Ch24.html
+++ b/Baha'i/Others/DBNN/p527-581Ch24.html
@@ -57,6 +57,7 @@
 	</td>
 	<td VALIGN=top width="20%"><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note354">354</a><p>
 	<i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#p35">p. 35</a><p>
 	<i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../ROB/V2/p469-476Index.html#Zanján,upheavalof">2</a>, <a href="../ROB/V4/p463-485Index.html#Zanján">4</a>
 	</small></td>
