--- a/Baha'i/Others/ROB/V1/p071-083Ch06.html
+++ b/Baha'i/Others/ROB/V1/p071-083Ch06.html
@@ -210,6 +210,8 @@
 	   6. Bahá'u'lláh, <i>The Hidden Words</i>. The words quoted in this paragraph are taken (in this order} from the Arabic and Persian versions, as indicated: no. <a href="../../../Baha/HiddenWords.html#arabic1">1</a> Arabic, nos. <a href="../../../Baha/HiddenWords.html#persian26">26</a> and <a href="../../../Baha/HiddenWords.html#persian57">57</a> Persian, nos. <a href="../../../Baha/HiddenWords.html#arabic12">12</a>, <a href="../../../Baha/HiddenWords.html#arabic14">14</a> and <a href="../../../Baha/HiddenWords.html#arabic32">32</a> Arabic, nos. <a href="../../../Baha/HiddenWords.html#persian32">32</a>, <a href="../../../Baha/HiddenWords.html#persian74">74</a>, <a href="../../../Baha/HiddenWords.html#persian82">82</a>, <a href="../../../Baha/HiddenWords.html#persian81">81</a>, <a href="../../../Baha/HiddenWords.html#persian17">17</a>, <a href="../../../Baha/HiddenWords.html#persian64">64</a>, <a href="../../../Baha/HiddenWords.html#persian63">63</a>, <a href="../../../Baha/HiddenWords.html#persian53">53</a> and <a href="../../../Baha/HiddenWords.html#persian76">76</a> Persian.<p>
 	   7. <i>ibid.</i>, no. <a href="../../../Baha/HiddenWords.html#arabic13">13</a>, Arabic version.<p>
 	   8. <i>ibid.</i>, no. <a href="../../../Baha/HiddenWords.html#persian19">19</a>, Persian version.
+       <hr>
+       <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../../Baha/KI/Annotations.html#note141">141</a><p>
 	   </small></td>
 </tr>
 <tr>
@@ -262,7 +264,9 @@
 	   <hr>
 	   13. Bahá'u'lláh, <i>The Hidden Words</i>, no. <a href="../../../Baha/HiddenWords.html#persian77">77</a>, Persian version.<p>
 	   14. The interpretations given by 'Abdu'l-Bahá, and cited in these paragraphs, are taken from His Tablets as quoted in <i>Asráru'l-Áthár</i>, vol. v, pp. 36-40, and in <i>Má'idiy-i-Ásamání</i>, vol. II, p. 37.<p>
-	   15. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 116, for the words quoted.<p>
+	   15. Shoghi Effendi, 'The Dispensation of Bahá'u'lláh', included in <i>The World Order of Bahá'u'lláh</i>, p. 116, for the words quoted.
+       <hr>
+       <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../../Baha/KI/Annotations.html#note423">423</a><p>
 	   </small></td>
 </tr>
 </table>
