--- a/Baha'i/Others/ROB/V1/p105-152Ch09.html
+++ b/Baha'i/Others/ROB/V1/p105-152Ch09.html
@@ -407,6 +407,7 @@
        <td VALIGN=top><small><center><a name="p125">125</a></center><p>
 	   <hr>
 	   <hr>
+       <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../../Baha/KI/Annotations.html#note344">344</a><p>
 	   [Lawh-i-Húríyyih] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para112">p. 140</a>
 	   </small></td>
 </tr>
@@ -829,6 +830,7 @@
        <td VALIGN=top><small><center><a name="p152">152</a></center><p>
 	   * The Promised One of Islám Whose advent the Báb fulfilled. See p. <a href="#p126">126</a>.<p>
 	   <hr>
+       <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../../Baha/KI/Annotations.html#note58">58</a><p>
 	   <a href="../../../Baha/KI/p001-094.html"><i>The Kitáb-i-Íqán</i></a>
 	   </small></td>
 </tr>
