--- a/Baha'i/Others/ROB/V1/p153-197Ch10.html
+++ b/Baha'i/Others/ROB/V1/p153-197Ch10.html
@@ -256,7 +256,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p166">166</a></center><p>
 	   <hr>
-	   11. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>. This quotation is taken from pp. 15, 16-17 (Brit.) and from pp. <a href="../../../Baha/KI/p001-094.html#para22">22</a>, <a href="../../../Baha/KI/p001-094.html#para23">24</a>-<a href="../../../Baha/KI/p001-094.html#para25">5</a> and <a href="../../../Baha/KI/p001-094.html#para26">26</a> (U.S.).
+	   11. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>. This quotation is taken from pp. 15, 16-17 (Brit.) and from pp. <a href="../../../Baha/KI/p001-094.html#para22">22</a>, <a href="../../../Baha/KI/p001-094.html#para23">24</a>-<a href="../../../Baha/KI/p001-094.html#para25">5</a> and <a href="../../../Baha/KI/p001-094.html#parb25">25</a> (U.S.).
 	   </small></td>
 </tr>
 <tr>
@@ -585,7 +585,7 @@
        <td VALIGN=top><small><center><a name="p184">184</a></center><p>
 	   * <a href="../../../../CLUI/UnifiedIndex.html#BibleJohn3:7">John iii. 7</a>.<p>
 	   † <i>ibid</i>., vv. <a href="../../../../CLUI/UnifiedIndex.html#BibleJohn3:5">5</a>-<a href="../../../../CLUI/UnifiedIndex.html#BibleJohn3:6">6</a>.<p>
-	   ‡ <i>Qur'án</i> vii. 178.<p>
+	   ‡ <a href="../../../../CLUI/UnifiedIndex.html#Qur'án7:178"><i>Qur'án</i> vii. 178</a>.<p>
 	   § <a href="../../../../CLUI/UnifiedIndex.html#BibleLuke9:60">Luke ix. 60</a>, as cited in the <i>Kitáb-i-Íqán</i>.<p>
 	   <hr>
 	   38. Bahá'u'lláh, <i>Kitáb-i-Íqán</i>, p. 74 (Brit.), <a href="../../../Baha/KI/p095-258.html#para19">p. 114</a> (U.S.).<p>
