--- a/Baha'i/Others/ROB/V2/p029-054Ch02.html
+++ b/Baha'i/Others/ROB/V2/p029-054Ch02.html
@@ -109,6 +109,7 @@
        <td VALIGN=top><small><center><a name="p33">33</a></center><p>
 	   * See vol. 1, pp. <a href="../V1/p018-044Ch03.html#p43">43</a>-4.<br>
 	   <hr>
+       [It is this kind of knowledge...] <i>The Kitáb-i-Íqán</i> <a href="../../../Baha/KI/p001-094.html#parb48">p. 46</a><p>
 	   [The door of the knowledge...] <i>The Kitáb-i-Íqán</i> <a href="../../../Baha/KI/p095-258.html#para5">p. 99</a>
 	   </small></td>
 </tr>
