--- a/Baha'i/Others/ROB/V3/p001-031Ch01.html
+++ b/Baha'i/Others/ROB/V3/p001-031Ch01.html
@@ -564,6 +564,8 @@ p. 16	   added paragraph separator in God Passes By quote to match the book itse
        <td VALIGN=top><small><center><a name="p31">31</a></center><p>
 	   <hr>
 	   17. <i>Gleanings</i>, <a href="../../../Baha/GL/p003-346.html#XIII">XIII</a>, 1.
+       <hr>
+       <i>The Kitáb-i-Íqán</i>, <a href="../../../Baha/KI/p001-094.html#parb3">&para;3</a>
 	   </small></td>
 </tr>
 </table>
