--- a/Baha'i/Others/ROB/V4/p011-032Ch02.html
+++ b/Baha'i/Others/ROB/V4/p011-032Ch02.html
@@ -394,7 +394,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p31">31</a></center><p>
-	   * <i>Qur'án</i> 21:68. This verse is about Abraham being thrown into the fire by his people, when God turned the fire cold.<p>
+	   * <a href="../../../../CLUI/UnifiedIndex.html#Qur'án21:68"><i>Qur'án</i> 21:68</a>. This verse is about Abraham being thrown into the fire by his people, when God turned the fire cold.<p>
 	   † The Garden of Ridván was a very beautiful oasis in the area, a place full of fruits and flowers which some of the inhabitants were eager to take away. If they had been able to gain admission, it would have been impossible to keep the Garden as a holy place. (A.T.)
 	   </small></td>
 </tr>
