--- a/Baha'i/Others/ROB/V4/p315-328Ch21.html
+++ b/Baha'i/Others/ROB/V4/p315-328Ch21.html
@@ -62,7 +62,7 @@
 	   1. Unpublished compilation, National Archives Committee, no. 27, p. 354. Shoghi Effendi's English translation is well-known to Bahá'ís and appears on the title-page of <i><a href="../../../Comp/BP/Prologue.html">Bahá'í Prayers</a></i> (Wilmette, Illinois: Bahá'í publishing Trust, 1982).<p>
 	   2. <i>Bahá'í Meetings</i>, p. 21.<p>
 	   <hr>
-	   Audio: <a href="https://drive.google.com/file/d/0B6cYw5IwKTYsV2Mxd09QUENYYTQ/edit?usp=sharing">Blessed is the Spot</a> (in Arabic). <small>See <a href="../../../../download.html">Download Center</a>.</small>
+	   Audio: <a href="../../../../Downloads/Arabic-BlessedIsTheSpot.mp3">Blessed is the Spot</a> (in Arabic). <small>See <a href="../../../../download.html">Download Center</a>.</small>
 	   </small></td>
 </tr>
 <tr>
