--- a/Baha'i/SE/GPB/p413-436Index.html
+++ b/Baha'i/SE/GPB/p413-436Index.html
@@ -3,6 +3,7 @@
 
 <!-- ISSUES LOG
 Qayyúmu'l-Asmá' - added all pages with references
+'Last words to multitude,' - changed from p 55 to p 53
 -->
 
 <html>
@@ -350,7 +351,7 @@ Báb,<br>
 	inaugurates universal prophetic cycle, <a href= "../GPB/p001-086FirstPeriod.html#p57">57</a><br>
 	influence on people of Isfahán, <a href= "../GPB/p001-086FirstPeriod.html#p14">14</a><br>
 	interviews with Vahíd, <a href= "../GPB/p001-086FirstPeriod.html#p11">11</a>, <a href= "../GPB/p001-086FirstPeriod.html#p12">12</a><br>
-	last words to multitude, <a href= "../GPB/p001-086FirstPeriod.html#p55">55</a><br>
+	last words to multitude, <a href= "../GPB/p001-086FirstPeriod.html#para85">53</a><br>
 	Letters of the Living, <a href= "../GPB/p001-086FirstPeriod.html#p7">7</a>, <a href= "../GPB/p001-086FirstPeriod.html#p8">8</a><br>
 	manuscripts in hands of Mirza Yahyá, <a href= "../GPB/p087-234SecondPeriod.html#p167">167</a><br>
 	Martyr Prophet of Shíráz, <a href= "../GPB/p235-320ThirdPeriod.html#p276">276</a><br>
