--- a/Baha'i/SE/GPB/p235-320ThirdPeriod.html
+++ b/Baha'i/SE/GPB/p235-320ThirdPeriod.html
@@ -122,6 +122,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+    <i>The Kitáb-i-Íqán</i>, Annotations, <a href="../../Baha/KI/Annotations.html#note80">80</a><p>
 	["In other Tablets..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 1, <a href="../../Others/ROB/V1/p071-083Ch06.html#p81">p. 81</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">239</DIV></center><p></small></td>
