--- a/about.html
+++ b/about.html
@@ -1,6 +1,11 @@
 <html>
 <head>
-	<title>The Covenant Library</title>
+	<title>The Covenant Library- About</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        html {font-size: 16px;}
+    </style>
 </head>
 
 <body BACKGROUND=BK2a.JPG>
@@ -41,6 +46,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Version</b></center></td>
        <td><center><b>Description</b></center></td>
        <td><center><b>Date</b></center></td>
+</tr>
+<tr>
+       <td>1.14.0</td>
+       <td>Addition of select sections of Hooper C. Dunbar's superlative <i>A Companion to the Study of The Kitab-I-Íqán</i>.</td>
+       <td>January 2026</td>
 </tr>
 <tr>
        <td>1.13.0</td>
