--- a/Baha'i/Baha/KI/p001-094.html
+++ b/Baha'i/Baha/KI/p001-094.html
@@ -83,7 +83,7 @@ Page 35: 1. "Lamentation" attributed to the Twelfth Imám. -- KI Glossary says: 
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">2</DIV></center><p></small></td>
 </tr>
 <tr>
-	<td colspan=2><a name="para1"><a name="parb0"></a></a><a name="p3"/><center><h3><i>IN THE NAME OF OUR LORD,<br><a class="hh" title="O Thou the Exalted, the Most High''. Names of God often associated with the Báb Himself as in the 'battle cry' animating the heroes and heroines of the Ten Year Spiritual Crusade (1953-63): 'Yá-Bahá'u'l-Abhá, Yá Alíyyu'l-A'lá.'" href="../../../CLUG/UnifiedGlossary.html#Yá'Alíyyu'l-'Alá">THE EXALTED, THE MOST HIGH</a>.</i></h3></center><p></td>
+	<td colspan=2><a name="para1"><a name="parb0"></a></a><a name="p3"/><center><h3><i>IN THE NAME OF OUR LORD,<br><a class="hh" title="''O Thou the Exalted, the Most High''. Names of God often associated with the Báb Himself as in the 'battle cry' animating the heroes and heroines of the Ten Year Spiritual Crusade (1953-63): 'Yá-Bahá'u'l-Abhá, Yá Alíyyu'l-A'lá.'" href="../../../CLUG/UnifiedGlossary.html#Yá'Alíyyu'l-'Alá">THE EXALTED, THE MOST HIGH</a>.</i></h3></center><p></td>
 	<td VALIGN=top>
     	<small>
         <hr>
@@ -119,7 +119,8 @@ Page 35: 1. "Lamentation" attributed to the Twelfth Imám. -- KI Glossary says: 
 	<td VALIGN=top><small>
 	<hr>
     	Notes <a href="Annotations.html#note6">6</a>, <a href="Annotations.html#note7">7</a>, <a href="Annotations.html#note8">8</a><p>
-	["The essence of these words..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p162">p. 162</a>, vol. 3 <a href="../../Others/ROB/V3/p087-107Ch05.html#p95">p. 95</a> 	</small></td>
+	["The essence of these words..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p162">p. 162</a>, vol. 3 <a href="../../Others/ROB/V3/p087-107Ch05.html#p95">p. 95</a> 
+	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">4</DIV></center><p></small>
 	
 	</td>
